; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_convert_datatype.c_can_cast_fields.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_convert_datatype.c_can_cast_fields.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @can_cast_fields to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @can_cast_fields(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = icmp eq i32* %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %54

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %22, label %19

19:                                               ; preds = %16
  %20 = load i32*, i32** %6, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %22, label %23

22:                                               ; preds = %19, %16
  store i32 0, i32* %4, align 4
  br label %54

23:                                               ; preds = %19
  %24 = load i32*, i32** %5, align 8
  %25 = call i64 @PyDict_Size(i32* %24)
  %26 = load i32*, i32** %6, align 8
  %27 = call i64 @PyDict_Size(i32* %26)
  %28 = icmp ne i64 %25, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %23
  store i32 0, i32* %4, align 4
  br label %54

30:                                               ; preds = %23
  store i64 0, i64* %8, align 8
  br label %31

31:                                               ; preds = %52, %30
  %32 = load i32*, i32** %5, align 8
  %33 = call i64 @PyDict_Next(i32* %32, i64* %8, i32** %9, i32** %10)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %53

35:                                               ; preds = %31
  %36 = load i32*, i32** %6, align 8
  %37 = load i32*, i32** %9, align 8
  %38 = call i32* @PyDict_GetItem(i32* %36, i32* %37)
  store i32* %38, i32** %11, align 8
  %39 = icmp eq i32* %38, null
  br i1 %39, label %40, label %41

40:                                               ; preds = %35
  store i32 0, i32* %4, align 4
  br label %54

41:                                               ; preds = %35
  %42 = load i32*, i32** %10, align 8
  %43 = call i64 @PyTuple_GET_ITEM(i32* %42, i32 0)
  %44 = inttoptr i64 %43 to i32*
  %45 = load i32*, i32** %11, align 8
  %46 = call i64 @PyTuple_GET_ITEM(i32* %45, i32 0)
  %47 = inttoptr i64 %46 to i32*
  %48 = load i32, i32* %7, align 4
  %49 = call i32 @PyArray_CanCastTypeTo(i32* %44, i32* %47, i32 %48)
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %52, label %51

51:                                               ; preds = %41
  store i32 0, i32* %4, align 4
  br label %54

52:                                               ; preds = %41
  br label %31

53:                                               ; preds = %31
  store i32 1, i32* %4, align 4
  br label %54

54:                                               ; preds = %53, %51, %40, %29, %22, %15
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

declare dso_local i64 @PyDict_Size(i32*) #1

declare dso_local i64 @PyDict_Next(i32*, i64*, i32**, i32**) #1

declare dso_local i32* @PyDict_GetItem(i32*, i32*) #1

declare dso_local i32 @PyArray_CanCastTypeTo(i32*, i32*, i32) #1

declare dso_local i64 @PyTuple_GET_ITEM(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
